# selector

./: pyproject.toml  requirements.txt
src/: main.py  settings.py
tests/: test_selector.py
